--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Yashwant Singh.</span>
+                    Hi, I'm <span>ball love 007.</span>
                     A cybersecurity analyst and researcher.
                 </h1>
                 <p>
